--- a/frontend_base/index.html
+++ b/frontend_base/index.html
@@ -1,1 +1,9 @@
-we need to fill this out, it will be our landing page
+<!DOCTYPE html>
+<html>
+    <head>
+
+    </head>
+    <body>
+        
+    </body>
+</html>
