--- a/frontend_base/index.html
+++ b/frontend_base/index.html
@@ -1,4 +1,9 @@
 we need to fill this out, it will be our landing page
-<!--we need to fill this out, it will be our landing page-->
-<
+<!--we need to fill this out, it will be our landing page
+Colour code scheme RGB-69,69,69 for background stuff
+                
+
+
+-->
+
 <!DOCTYPE html>
