--- a/frontend_base/secondary.html
+++ b/frontend_base/secondary.html
@@ -17,5 +17,7 @@
     <!-- Bootstrap JS bundle CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
+    <!-- Custom JS -->
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
