--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -8,9 +8,31 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Festivalist</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body class="p-3 mb-2 bg-dark text-white">
         
+        <div class="header" class="sticky-top" >
+            <h1> Festivalist </h1>
+        </div>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
+         <p>large test</p>
     </body>
 </html>
