--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -17,8 +17,8 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
     </head>
     <body class="px-3 pb-3 mb-2 bg-dark text-white">
         
-        <div class="header" class="sticky-top" >
-            <h1> Festivalist </h1>
+        <div class="header text-center" class="sticky-top" >
+            <h1 class="border px-3 pb-1 border-top-0 border-5 border-custom"> Festivalist </h1>
         </div>
          <p>large test</p>
          <p>large test</p>
