--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -27,7 +27,7 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
                     </h4>
                 </th>
                 <th>
-                    <h1 class=""> Festivalist </h1>
+                    <h1> Festivalist </h1>
                 </th>
                 <th>
                     <h4>
