Added switch and search

--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -20,15 +20,15 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
         <div class="header text-center container">
             <div class="row">
                 <div class="col">
-
+                    Switch
                 </div>
 
                 <div class="col">
                     <h1 class="border px-3 pb-1 border-top-0 border-5 border-custom"> Festivalist </h1> 
                 </div>  
-                
-                <div class="col">
 
+                <div class="col">
+                    Search
                 </div>
             </div>
         </div>
