--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -17,14 +17,14 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
     </head>
     <body class="px-3 pb-3 mb-2 bg-dark text-white">
 
-        <div class="header text-center container">
+        <div class="header text-center container border px-3 pb-1 border-top-0 border-5 border-custom bg-dark">
             <div class="row">
                 <div class="col">
                     Switch
                 </div>
 
                 <div class="col">
-                    <h1 class="border px-3 pb-1 border-top-0 border-5 border-custom"> Festivalist </h1> 
+                    <h1 class=""> Festivalist </h1> 
                 </div>  
 
                 <div class="col">
