--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -17,7 +17,7 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
     </head>
     <body class="px-3 pb-3 mb-2 bg-dark text-white">
 
-        <div class="header text-center container border px-3 pb-1 border-top-0 border-5 border-custom bg-dark">
+        <div class="header d-flex justify-content-center text-center container border px-3 pb-1 border-top-0 border-5 border-custom bg-dark">
             <div class="row">
                 <div class="col">
                     Switch
