--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -21,7 +21,7 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
         <div class="header text-center container border px-3 pb-1 border-top-0 border-5 border-custom bg-dark">
             <div class="row">
                 <div class="col">
-                    Switch
+                    <i class="fas fa-bars"></i>
                 </div>
 
                 <div class="col">
@@ -29,7 +29,7 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
                 </div>  
 
                 <div class="col">
-                    Search
+                    <i class="fas fa-search"></i>
                 </div>
             </div>
         </div>
