--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -18,17 +18,17 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
     </head>
     <body class="px-3 pb-3 mb-2 bg-dark text-white">
 
-        <div class="header d-flex justify-content-center text-center container border px-3 pb-1 border-top-0 border-5 border-custom bg-dark">
-            <div class="row">
-                <div class="col">
+        <div class="header container ">
+            <div class="row d-flex justify-content-between">
+                <div class="col d-flex flex-row mt-2">
                     <i class="fas fa-bars"></i>
                 </div>
 
-                <div class="col">
-                    <h1 class=""> Festivalist </h1> 
+                <div class="col  text-center">
+                    <h1 class="border px-3 pb-1 border-top-0 border-5 border-custom bg-dark"> Festivalist </h1> 
                 </div>  
 
-                <div class="col">
+                <div class="col d-flex flex-row-reverse mt-2">
                     <i class="fas fa-search"></i>
                 </div>
             </div>
