changed icon sizes

--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -21,7 +21,7 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
         <div class="header container ">
             <div class="row d-flex justify-content-between">
                 <div class="col d-flex flex-row mt-2">
-                    <i class="fas fa-bars"></i>
+                    <i class="fas fa-bars icon-custom"></i>
                 </div>
 
                 <div class="col  text-center">
@@ -29,7 +29,7 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
                 </div>  
 
                 <div class="col d-flex flex-row-reverse mt-2">
-                    <i class="fas fa-search"></i>
+                    <i class="fas fa-search icon-custom"></i>
                 </div>
             </div>
         </div>
