Added placeholder map image

--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -21,7 +21,7 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
         <div class="header container ">
             <div class="row d-flex justify-content-between">
                 <div class="col d-flex flex-row mt-2">
-                    <i class="fas fa-bars icon-custom"></i>
+                    <i class="fas fa-bars icon-custom change-to-list-view"></i>
                 </div>
 
                 <div class="col  text-center">
@@ -29,11 +29,13 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
                 </div>  
 
                 <div class="col d-flex flex-row-reverse mt-2">
-                    <i class="fas fa-search icon-custom"></i>
+                    <i class="fas fa-search icon-custom search"></i>
                 </div>
             </div>
         </div>
-
+        <div class="text-center">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/World_map_-_low_resolution.svg" class="map">
+        </div>
          <p>large test</p>
          <p>large test</p>
          <p>large test</p>
