Added info container

--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -36,6 +36,26 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
         <div class="text-center">
             <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/World_map_-_low_resolution.svg" class="map">
         </div>
+
+        <div class="info container secondary-color">
+            <h3>
+                Festival Title
+            </h3>
+            <p>
+                Type: genre
+            </p>
+            <p>
+                Location
+            </p>
+            <p>
+                Lineup
+            </p>
+            <p>
+                Ticket Price
+            </p>
+            <p>
+        </div>
+        
          <p>large test</p>
          <p>large test</p>
          <p>large test</p>
