--- a/frontend_base/info.html
+++ b/frontend_base/info.html
@@ -1,3 +1,8 @@
+<!--
+    This will be the reusable container which shows up when you click a
+    festival on the map or in the list view
+-->
+
 <div class="info container secondary-color">
     <h3>
         Festival Title
