--- a/frontend_base/header.html
+++ b/frontend_base/header.html
@@ -1,3 +1,11 @@
+<!--
+    This is the header of the page where the Festivalis title is placed
+    that follows the user around the page
+    There should also be a login button added somewhere here if we go for
+    that
+    This will be used on the primary and secondary site
+-->
+
 <div class="header container ">
     <div class="row d-flex justify-content-between">
         <div class="col d-flex flex-row mt-2">
