--- a/frontend_base/secondary.html
+++ b/frontend_base/secondary.html
@@ -8,16 +8,23 @@
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/939bc6dcd6.js" crossorigin="anonymous"></script>
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Festivalist</title>
 </head>
-<body>
-    
+<body class="px-3 pb-3 mb-2 bg-dark text-white">
+    <header-component></header-component>
+    <info-component></info-component>
     <!-- Bootstrap JS bundle CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
     <!-- Custom JS -->
     <script src="assets/js/main.js"></script>
+
+    <script src="assets/js/components/header.js" type="text/javascript" defer></script>
+    <script src="assets/js/components/info.js" type="text/javascript" defer></script>
 </body>
 </html>
