--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -33,7 +33,8 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
     
         <!-- Custom JS -->
         <script src="assets/js/main.js"></script>
-
+        
+        <!-- Components -->
         <script src="assets/js/components/header.js" type="text/javascript" defer></script>
         <script src="assets/js/components/info.js" type="text/javascript" defer></script>
     </body>
