--- a/frontend_base/secondary.html
+++ b/frontend_base/secondary.html
@@ -24,6 +24,7 @@
     <!-- Custom JS -->
     <script src="assets/js/main.js"></script>
 
+    <!-- Components -->
     <script src="assets/js/components/header.js" type="text/javascript" defer></script>
     <script src="assets/js/components/info.js" type="text/javascript" defer></script>
 </body>
