--- a/frontend_base/primary.html
+++ b/frontend_base/primary.html
@@ -20,7 +20,7 @@ Colour code scheme RGB-69,69,69 for background stuff !-->
         <title>Festivalist</title>
     </head>
     <body class="px-3 pb-3 mb-2 bg-dark text-white">
-        <header-component></header-component>
+        <primary-header-component></primary-header-component>
 
         <div class="text-center">
             <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/World_map_-_low_resolution.svg" class="map">
