--- a/frontend_base/secondary.html
+++ b/frontend_base/secondary.html
@@ -16,7 +16,7 @@
     <title>Festivalist</title>
 </head>
 <body class="px-3 pb-3 mb-2 bg-dark text-white">
-    <header-component></header-component>
+    <secondary-header-component></secondary-header-component>
     <info-component></info-component>
     <!-- Bootstrap JS bundle CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
